--- a/src/main/resources/com/example/weblogicexp/hello-view.fxml
+++ b/src/main/resources/com/example/weblogicexp/hello-view.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
@@ -19,37 +20,38 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="834.0" prefWidth="1070.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<?import java.lang.String?>
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="834.0" prefWidth="1070.0" style="-fx-font-family: 'Microsoft Sans Serif'" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.weblogicexp.HelloController">
    <children>
-      <Pane prefHeight="200.0" prefWidth="200.0">
+      <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-font-family: 'Microsoft Sans Serif'">
          <children>
-            <TextField layoutX="82.0" layoutY="10.0" prefHeight="36.0" prefWidth="462.0" promptText="http://127.0.0.1:8080"/>
-            <TextField layoutX="701.0" layoutY="67.0" prefHeight="28.0" prefWidth="355.0" promptText="jrmp://xxxxx:9999"/>
-            <TextField layoutX="701.0" layoutY="4.0" prefHeight="28.0" prefWidth="355.0" promptText="ldap://xxxxxx:1389/calc"/>
+            <TextField fx:id="urlInputForCheck" layoutX="82.0" layoutY="10.0" prefHeight="36.0" prefWidth="462.0" promptText="http://127.0.0.1:8080" />
+            <TextField fx:id="jrmpInputForCheck" layoutX="701.0" layoutY="67.0" prefHeight="28.0" prefWidth="355.0" promptText="jrmp://xxxxx:9999" />
+            <TextField fx:id="jndiInputForCheck" layoutX="701.0" layoutY="4.0" prefHeight="28.0" prefWidth="355.0" promptText="ldap://xxxxxx:1389/calc" />
             <Label layoutX="660.0" layoutY="10.0" text="JNDI" />
             <Label layoutX="663.0" layoutY="41.0" text="RMI" />
-            <TextField layoutX="701.0" layoutY="35.0" prefHeight="28.0" prefWidth="355.0" promptText="rmi://xxxxx:8888"/>
+            <TextField fx:id="rmiInputForCheck" layoutX="701.0" layoutY="35.0" prefHeight="28.0" prefWidth="355.0" promptText="rmi://xxxxx:8888" />
             <Label layoutX="657.0" layoutY="73.0" text="JRMP" />
             <Label layoutX="652.0" layoutY="109.0" text="DNSlog" />
-            <Button layoutX="429.0" layoutY="67.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="115.0" text="检查" />
-            <TextField layoutX="701.0" layoutY="103.0" prefHeight="28.0" prefWidth="355.0"  promptText="xxx.dnslog.xx" />
+            <Button layoutX="429.0" layoutY="67.0" mnemonicParsing="false" onMouseClicked="#StartCheckAllVuls" prefHeight="56.0" prefWidth="115.0" text="检查">
+            </Button>
+            <TextField fx:id="dnsLogInputForCheck" layoutX="701.0" layoutY="103.0" prefHeight="28.0" prefWidth="355.0" promptText="xxx.dnslog.xx" />
             <Label layoutX="25.0" layoutY="19.0" prefHeight="17.0" prefWidth="42.0" text="目标" />
-            <MenuButton layoutX="93.0" layoutY="73.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="268.0" text="选择漏洞">
-              <items>
-                <MenuItem mnemonicParsing="false" text="CVE-2022-xxx" />
-                <MenuItem mnemonicParsing="false" text="CVE-2022-xxx" />
-              </items>
-            </MenuButton>
+            <ComboBox fx:id="vulsNameOfAll" layoutX="113.0" layoutY="71.0" prefHeight="49.0" prefWidth="262.0" >
+               <value>
+                  <String fx:value="请选择漏洞"/>
+               </value>
+            </ComboBox>
          </children>
       </Pane>
-      <TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="692.0" prefWidth="1069.0" tabClosingPolicy="UNAVAILABLE">
+      <TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="692.0" prefWidth="1069.0" style="-fx-font-family: 'Microsoft Sans Serif'" tabClosingPolicy="UNAVAILABLE">
          <tabs>
             <Tab text="基础信息">
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="661.0" prefWidth="990.0">
                      <children>
-                        <TextArea layoutX="7.0" layoutY="6.0" prefHeight="616.0" prefWidth="738.0" text="信息xx&#10;&#10; java -cp ./ysoserial.jar ysoserial.exploit.JRMPListener 9999 CommonsCollections3 'calc'&#10;jrmp://xxxxx:9999&#10;&#10;ldap://xxxxxx:1389/calc&#10;&#10;rmi://xxxxx:8888" />
-                        <TextArea editable="false" layoutX="767.0" layoutY="14.0" prefHeight="293.0" prefWidth="270.0" text="简介什么的 " />
+                        <TextArea fx:id="baseInfoOutPut" layoutX="7.0" layoutY="6.0" prefHeight="616.0" prefWidth="738.0" promptText="信息xx&#13;&#10; java -cp ./ysoserial.jar ysoserial.exploit.JRMPListener 9999 CommonsCollections3 'calc' &#13;&#10; jrmp://xxxxx:9999 &#13;&#10; ldap://xxxxxx:1389/calc &#13;&#10; rmi://xxxxx:8888" wrapText="true" />
+                        <TextArea editable="false" layoutX="767.0" layoutY="14.0" prefHeight="293.0" prefWidth="270.0" text="简介&#13;&#10; 主要实现了weblogic的几个漏洞：&#13;&#10; cve-2020-14882&#13;&#10; ... " />
                      </children>
                   </AnchorPane>
                </content>
