--- a/src/main/resources/com/example/weblogicexp/hello-view.fxml
+++ b/src/main/resources/com/example/weblogicexp/hello-view.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
@@ -20,7 +21,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<?import java.lang.String?>
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="834.0" prefWidth="1070.0" style="-fx-font-family: 'Microsoft Sans Serif'" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.weblogicexp.HelloController">
    <children>
       <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-font-family: 'Microsoft Sans Serif'">
@@ -37,9 +37,9 @@
             </Button>
             <TextField fx:id="dnsLogInputForCheck" layoutX="701.0" layoutY="103.0" prefHeight="28.0" prefWidth="355.0" promptText="xxx.dnslog.xx" />
             <Label layoutX="25.0" layoutY="19.0" prefHeight="17.0" prefWidth="42.0" text="目标" />
-            <ComboBox fx:id="vulsNameOfAll" layoutX="113.0" layoutY="71.0" prefHeight="49.0" prefWidth="262.0" >
+            <ComboBox fx:id="vulsNameOfAll" layoutX="113.0" layoutY="71.0" prefHeight="49.0" prefWidth="262.0">
                <value>
-                  <String fx:value="请选择漏洞"/>
+                  <String fx:value="请选择漏洞" />
                </value>
             </ComboBox>
          </children>
@@ -60,12 +60,12 @@
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <TextField layoutX="142.0" layoutY="14.0" prefHeight="41.0" prefWidth="238.0" />
+                        <TextField fx:id="importFilePathOfTargets" layoutX="142.0" layoutY="14.0" prefHeight="41.0" prefWidth="238.0" />
                         <Label layoutX="32.0" layoutY="15.0" prefHeight="40.0" prefWidth="110.0" text="请导入文件" />
-                        <Button layoutX="426.0" layoutY="17.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="81.0" text="导入" />
-                        <Button layoutX="550.0" layoutY="17.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="81.0" text="开始" />
+                        <Button fx:id="importFileOfTargets" layoutX="426.0" layoutY="17.0" mnemonicParsing="false" onMouseClicked="#ImportFileOfTargets" prefHeight="36.0" prefWidth="81.0" text="导入" />
+                        <Button id="StartCheckFromImportFile" layoutX="550.0" layoutY="17.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="81.0" text="开始" />
                         <Button layoutX="673.0" layoutY="17.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="81.0" text="停止" />
-                        <Button layoutX="799.0" layoutY="17.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="81.0" text="清空" />
+                        <Button id="clearResult" layoutX="799.0" layoutY="17.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="81.0" text="清空" />
                         <TableView layoutX="65.0" layoutY="101.0" prefHeight="529.0" prefWidth="940.0">
                            <columns>
                               <TableColumn prefWidth="311.0" text="URL" />
